--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 <div class="header">
 	<div class="left">
-		<h1>JSON REST API</h1>
+		<h1>WP API</h1>
 		<ul>
 			<li><a href="https://github.com/WP-API/WP-API">Source on GitHub</a></li>
 			<li><a href="https://github.com/WP-API/WP-API/issues">Issues</a></li>
