New menu item for guides, link to new stylesheet

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<script src="http://rstacruz.github.io/flatdoc/v/0.8.0/flatdoc.js"></script>
 
 	<!-- Flatdoc theme -->
-	<link  href="http://rstacruz.github.io/flatdoc/v/0.8.0/theme-white/style.css" rel="stylesheet">
+	<link  href="theme-wpblue/style.css" rel="stylesheet">
 	<script src="http://rstacruz.github.io/flatdoc/v/0.8.0/theme-white/script.js"></script>
 
 	<!-- Meta -->
@@ -39,7 +39,6 @@
 				};
 
 				var promise = $.when.apply(null, requests);
-			  
 				promise.fail(function(e) { callback(e, null); });
 				promise.done(function(data) {
 					var responses = Array.prototype.slice.call(arguments);
@@ -95,10 +94,12 @@
 
 <div class="header">
 	<div class="left">
+
 		<h1>WP API</h1>
 		<ul>
 			<li><a href="https://github.com/WP-API/WP-API">Source on GitHub</a></li>
 			<li><a href="https://github.com/WP-API/WP-API/issues">Issues</a></li>
+			<li><a href="https://github.com/WP-API/WP-API/blob/master/docs/guides/README.md">Guides</a></li>
 		</ul>
 	</div>
 	<div class="right">
