--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
 				{ repo: "WP-API/WP-API", filepath: "README.md" },
 				{ repo: "WP-API/WP-API", filepath: "docs/routes/posts.md" },
 				{ repo: "WP-API/WP-API", filepath: "docs/routes/media.md" },
-				{ repo: "WP-API/WP-API", filepath: "docs/routes/users.md" }
+				{ repo: "WP-API/WP-API", filepath: "docs/routes/users.md" },
+				{ repo: "WP-API/WP-API", filepath: "docs/routes/taxonomies.md" }
 			])
 		});
 	</script>
