--- a/index.html
+++ b/index.html
@@ -98,9 +98,10 @@
 
 		<h1>WP API</h1>
 		<ul>
+			<li><a href="http://wp-api.org/">REST API</a></li>
 			<li><a href="https://github.com/WP-API/WP-API">Source on GitHub</a></li>
 			<li><a href="https://github.com/WP-API/WP-API/issues">Issues</a></li>
-			<li><a href="https://github.com/WP-API/WP-API/blob/master/docs/guides/README.md">Guides</a></li>
+			<li><a href="https://github.com/WP-API/WP-API.github.io/guides.html">Guides</a></li>
 		</ul>
 	</div>
 	<div class="right">
