--- a/guides.html
+++ b/guides.html
@@ -100,7 +100,7 @@
       <li><a href="http://wp-api.org/">REST API</a></li>
       <li><a href="https://github.com/WP-API/WP-API">Source on GitHub</a></li>
       <li><a href="https://github.com/WP-API/WP-API/issues">Issues</a></li>
-      <li><a href="https://github.com/WP-API/WP-API.github.io/guides.html">Guides</a></li>
+      <li><a href="http://wp-api.org/guides.html">Guides</a></li>
     </ul>
   </div>
   <div class="right">
