Combined routes docs into 1 file

--- a/index.html
+++ b/index.html
@@ -83,10 +83,7 @@
 		Flatdoc.run({
 			fetcher: multi_github([
 				{ repo: "WP-API/WP-API", filepath: "README.md" },
-				{ repo: "WP-API/WP-API", filepath: "docs/routes/posts.md" },
-				{ repo: "WP-API/WP-API", filepath: "docs/routes/media.md" },
-				{ repo: "WP-API/WP-API", filepath: "docs/routes/users.md" },
-				{ repo: "WP-API/WP-API", filepath: "docs/routes/taxonomies.md" }
+				{ repo: "WP-API/WP-API", filepath: "docs/routes/routes.md" },
 			])
 		});
 	</script>
