--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+---
+title: WP API Documentation
+---
 <!doctype html>
 <html>
 <head>
@@ -5,15 +8,16 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width">
 
-	<title>WP API Documentation</title>
+	<title>{{ page.title }}</title>
 
 	<!-- Flatdoc -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script src="http://rstacruz.github.io/flatdoc/v/0.8.0/legacy.js"></script>
 	<script src="http://rstacruz.github.io/flatdoc/v/0.8.0/flatdoc.js"></script>
 
-	<!-- Flatdoc theme -->
-	<link  href="theme-wpblue/style.css" rel="stylesheet">
+	<link rel="stylesheet" href="{{ site.baseurl }}/stylesheets/styles.css">
+	<link rel="stylesheet" href="{{ site.baseurl }}/stylesheets/pygment_trac.css">
+
 	<script src="http://rstacruz.github.io/flatdoc/v/0.8.0/theme-white/script.js"></script>
 
 	<!-- Meta -->
@@ -88,31 +92,14 @@
 		});
 	</script>
 </head>
-<body role="flatdoc" class="large-brief no-literate">
 
-<div class="header">
-	<div class="left">
-
-		<h1>WP API</h1>
-		<ul>
-			<li><a href="http://wp-api.org/">REST API</a></li>
-			<li><a href="https://github.com/WP-API/WP-API">Source on GitHub</a></li>
-			<li><a href="https://github.com/WP-API/WP-API/issues">Issues</a></li>
-			<li><a href="http://wp-api.org/guides.html">Guides</a></li>
-		</ul>
-	</div>
-	<div class="right">
-		<!-- GitHub buttons: see http://ghbtns.com -->
-		<iframe src="http://ghbtns.com/github-btn.html?user=WP-API&amp;repo=WP-API&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
-	</div>
-</div>
+{% include header.html %}
 
 <div class="content-root">
-	<div class="menubar">
-		<div class="menu section" role="flatdoc-menu"></div>
-	</div>
+
+{% include sidebar.html %}
+
 	<div role="flatdoc-content" class="content"></div>
 </div>
 
-</body>
-</html>
+{% include footer.html %}
