Remove / between site.url and additional file or directory paths.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@ title: WP API Documentation
 	<script src="http://rstacruz.github.io/flatdoc/v/0.8.0/legacy.js"></script>
 	<script src="http://rstacruz.github.io/flatdoc/v/0.8.0/flatdoc.js"></script>
 
-	<link rel="stylesheet" href="{{ site.baseurl }}/stylesheets/styles.css">
-	<link rel="stylesheet" href="{{ site.baseurl }}/stylesheets/pygment_trac.css">
+	<link rel="stylesheet" href="{{ site.baseurl }}stylesheets/styles.css">
+	<link rel="stylesheet" href="{{ site.baseurl }}stylesheets/pygment_trac.css">
 
 	<script src="http://rstacruz.github.io/flatdoc/v/0.8.0/theme-white/script.js"></script>
 
