Switch to the rawgithub CDN for hotlinking the Flatdoc JS files.

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@ title: WP API Documentation
 
 	<!-- Flatdoc -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-	<script src="http://rstacruz.github.io/flatdoc/v/0.8.0/legacy.js"></script>
-	<script src="http://rstacruz.github.io/flatdoc/v/0.8.0/flatdoc.js"></script>
+	<script src="https://cdn.rawgit.com/rstacruz/flatdoc/gh-pages/legacy.js"></script>
+	<script src="https://cdn.rawgit.com/rstacruz/flatdoc/gh-pages/flatdoc.js"></script>
 
 	<link rel="stylesheet" href="{{ site.baseurl }}stylesheets/styles.css">
 	<link rel="stylesheet" href="{{ site.baseurl }}stylesheets/pygment_trac.css">
 
-	<script src="http://rstacruz.github.io/flatdoc/v/0.8.0/theme-white/script.js"></script>
+	<script src="https://cdn.rawgit.com/rstacruz/flatdoc/gh-pages/theme-white/script.js"></script>
 
 	<!-- Meta -->
 	<meta content="WP API" property="og:title">
