Add pointer to v2 site

--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@ title: WP API Documentation
 
 {% include sidebar.html %}
 
+	<div class="v2-pointer"><p>This site is for the legacy version (v1) of the API. <a href="http://v2.wp-api.org/">View Version 2 Documentation</a></p></div>
+
 	<div role="flatdoc-content" class="content"></div>
 </div>
 
