Update meta content

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ title: WP API Documentation
 	<script src="https://cdn.rawgit.com/rstacruz/flatdoc/gh-pages/theme-white/script.js"></script>
 
 	<!-- Meta -->
-	<meta content="WP API" property="og:title">
+	<meta content="WP API version 1" property="og:title">
 	<meta content="Official Documentation for WP API" name="description">
 
 	<!-- Initializer -->
