--- a/index.html
+++ b/index.html
@@ -1,4 +1,51 @@
 ---
-title: WP REST API (v1) Documentation - deprecated
-redirect_to: "http://v2.wp-api.org"
+title: WP REST API Documentation
 ---
+<!doctype html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="viewport" content="width=device-width">
+
+	<title>{{ page.title }}</title>
+
+	<link rel="stylesheet" href="{{ site.baseurl }}stylesheets/styles.css">
+
+	<script src="https://cdn.rawgit.com/rstacruz/flatdoc/gh-pages/theme-white/script.js"></script>
+
+	<!-- Meta -->
+	<meta content="WP API Documentation" property="og:title">
+	<meta content="Official Documentation for WP REST API" name="description">
+</head>
+
+<body role="flatdoc" class="large-brief no-literate">
+
+<div class="header">
+  <div class="left">
+
+    <h1><a href="http://v2.wp-api.org/">WP REST API</a></h1>
+    <ul>
+      <li><a href="https://github.com/WP-API/WP-API">Source on GitHub</a></li>
+      <li><a href="https://github.com/WP-API/WP-API/issues">Issues</a></li>
+    </ul>
+  </div>
+  <div class="right">
+    <!-- GitHub buttons: see http://ghbtns.com -->
+    <iframe src="http://ghbtns.com/github-btn.html?user=WP-API&amp;repo=WP-API&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
+  </div>
+</div>
+
+<div class="content-root">
+
+{% include sidebar.html %}
+
+	<div class="v2-pointer">
+        <p><a class="button" href="http://v2.wp-api.org/">View Version 2 Documentation</a></p>
+        <p>or continue to the <a href="/index-deprecated.html">Version 1 Documentation</a>.</p>
+    </div>
+
+
+</div>
+
+{% include footer.html %}
