Make button more prominent

--- a/index-deprecated.html
+++ b/index-deprecated.html
@@ -99,7 +99,7 @@ title: WP REST API (v1) Documentation - deprecated
 
 {% include sidebar.html %}
 
-	<div class="v2-pointer"><p>This site is for the legacy version (v1) of the API. <a href="http://v2.wp-api.org/">View Version 2 Documentation</a></p></div>
+	<div class="v2-pointer"><p>This site is for the legacy version (v1) of the API. <a class="button" href="http://v2.wp-api.org/">View Version 2 Documentation</a></p></div>
 
 	<div role="flatdoc-content" class="content"></div>
 </div>
