Notice to the user

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ title: WP REST API Documentation
 	<div class="v2-pointer">
         <p><a class="button" href="http://v2.wp-api.org/">View Version 2 Documentation</a></p>
         <p>or continue to the <a href="/index-deprecated.html">Version 1 Documentation</a>.</p>
+        <p><strong>Note:</strong> If you activate both v1 and v2 on your website, then v1 will take priority and v2 will be inaccessible.</p>
     </div>
 
 
